--- a/src/packages/examples/material-ui-components/package.json
+++ b/src/packages/examples/material-ui-components/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0-alpha.1.10",
   "description": "TypeScript Style Sheets.",
   "dependencies": {
-    "@springtype/core": "^1.0.0-alpha.1.10",
-    "@springtype/material-ui": "^1.0.0-alpha.1.10",
+    "@springtype/core": "file:../../core",
+    "@springtype/material-ui": "file:../../material-ui",
     "@types/node": "^11.10.5",
     "cross-env": "^5.2.0",
     "tslib": "^1.9.3"
