--- a/src/packages/material-ui/package.json
+++ b/src/packages/material-ui/package.json
@@ -9,6 +9,7 @@
     "@material/button": "^2.3.0",
     "@material/checkbox": "^2.3.0",
     "@material/form-field": "^2.3.0",
+    "@material/icon-button": "^2.3.0",
     "@material/radio": "^2.3.0",
     "@material/ripple": "^2.3.0",
     "@material/select": "^2.3.0",
