--- a/src/packages/material-ui/package.json
+++ b/src/packages/material-ui/package.json
@@ -7,6 +7,7 @@
   "description": "Material UI for SpringType.",
   "dependencies": {
     "@material/button": "^2.3.0",
+    "@material/card": "^2.3.0",
     "@material/checkbox": "^2.3.0",
     "@material/form-field": "^2.3.0",
     "@material/icon-button": "^2.3.0",
