--- a/src/devtools/src/manifest.json
+++ b/src/devtools/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "SpringType DevTools",
   "version": "0.1",
-  "description": "SpringType extension to inspect and debug SpringType elements",
+  "description": "SpringType extension to inspect and debug SpringType components",
   "devtools_page": "main.html",
   "permissions": ["tabs"],
   "manifest_version": 2,
