--- a/src/packages/router/package.json
+++ b/src/packages/router/package.json
@@ -6,7 +6,7 @@
   },
   "description": "DOM router for SpringType.",
   "dependencies": {
-    "@springtype/core": "^1.0.0-alpha.1.11",
+    "@springtype/core": "file:../core",
     "@types/node": "^11.10.5",
     "reflect-metadata": "^0.1.12",
     "ts-polyfill": "^3.3.3",
