--- a/src/packages/state/package.json
+++ b/src/packages/state/package.json
@@ -6,9 +6,9 @@
   },
   "description": "Redux/Rematch based state management for SpringType.",
   "dependencies": {
+    "@springtype/core": "file:../core",
     "@rematch/core": "1.1.0",
     "@rematch/immer": "1.0.2",
-    "@springtype/core": "^1.0.0-alpha.1.11",
     "@types/node": "^11.10.5",
     "reflect-metadata": "^0.1.12",
     "ts-polyfill": "^3.3.3",
